create and style Aside and Home Section

--- a/index.html
+++ b/index.html
@@ -5,9 +5,62 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/aalmin.css">
+  <script defer src="app.js"></script>
   <title>Personal Portfolio</title>
 </head>
 <body>
-  
+
+  <div class="main-container">
+
+    <div class="aside">
+
+      <div class="logo">
+        <a href="#"><span>A</span>dewale</a>
+      </div>
+
+      <div class="nav-toggler">
+        <span></span>
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
+          <li><a href="#"><i class="fa fa-user"></i>About</a></li>
+          <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
+          <li><a href="#"><i class="fa fa-briefcase"></i>Projects</a></li>
+          <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+        </ul>
+      </nav>
+
+    </div>
+
+    <div class="main-content">
+
+      <!-- HOME SECTION -->
+      <section class="home section">
+        <div class="container">
+          <div class="row">
+
+            <div class="home-info pad-15">
+              <h3 class="hi">Hi! my name is <span class="name">Abdulfatai Quadri Adewale</span></h3>
+              <h3 class="my-profession">I'm a <span class="typing">Frontend Software Engineer</span></h3>
+              <p>I am a Frontend Software Engineer skilled in the developement of Web Aapplication with HTML, CSS (Vanilla, SASS, Boostrap, Tailwind), Javascript, JSON, REST API, Reactjs, Redux and many more...</p>
+              <a href="#" class="btn download">Download My Cv</a>
+            </div>
+
+            <div class="home-img pad-15">
+              <img src="my-image.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ABOUT SECTION -->
+
+
+    </div>
+
+  </div>
 </body>
 </html>
