--- a/index.html
+++ b/index.html
@@ -35,29 +35,51 @@
 
     </div>
 
-    <div class="main-content">
+    <div class="main-content ">
 
       <!-- HOME SECTION -->
-      <section class="home section">
+      <section class="home section hidden">
         <div class="container">
           <div class="row">
 
             <div class="home-info pad-15">
               <h3 class="hi">Hi! my name is <span class="name">Abdulfatai Quadri Adewale</span></h3>
               <h3 class="my-profession">I'm a <span class="typing">Frontend Software Engineer</span></h3>
-              <p>I am a Frontend Software Engineer skilled in the developement of Web Aapplication with HTML, CSS (Vanilla, SASS, Boostrap, Tailwind), Javascript, JSON, REST API, Reactjs, Redux and many more...</p>
-              <a href="#" class="btn download">Download My Cv</a>
+              <p>I am a Frontend Software Engineer skilled in the developement of Web Application with HTML, CSS (Vanilla, SASS, Boostrap, Tailwind), Javascript, JSON, REST API, Reactjs, Redux and many more...</p>
+              <a href="#" class="btn download">Download My CV</a>
             </div>
 
             <div class="home-img pad-15">
-              <img src="my-image.jpg" alt="">
+              <img src="myImage.jpg" alt="">
             </div>
           </div>
         </div>
       </section>
 
       <!-- ABOUT SECTION -->
+      <div class="aboutMe section">
+        <div class="container">
 
+          <div class="row">
+            <div class="section-title pad-15">
+              <h2>About Me</h2>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="about-info pad-15">
+              <div class="rw">
+                <div class="about-text pad-15">
+                  <h3>I'm Abdulfatai Quadri and a <span>Frontend Developer</span></h3>
+                  <p>I am a Frontend Software Engineer skilled in the developement of Web Application with HTML, CSS (Vanilla, SASS, Boostrap, Tailwind), Javascript, JSON, REST API, Reactjs, Redux and many more...</p>
+                  <p>I have worked with UI/UX designs and built amazing User Interfac. I am always responsible and committed to my duties.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
 
     </div>
 
