create skills and info section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
             <div class="home-info pad-15">
               <h3 class="hi">Hi! my name is <span class="name">Abdulfatai Quadri Adewale</span></h3>
-              <h3 class="my-profession">I'm a <span class="typing">Frontend Software Engineer</span></h3>
-              <p>I am a Frontend Software Engineer skilled in the developement of Web Application with HTML, CSS (Vanilla, SASS, Boostrap, Tailwind), Javascript, JSON, REST API, Reactjs, Redux and many more...</p>
+              <h3 class="my-profession">I'm a <span class="typing">Frontend Developer</span></h3>
+              <p>I am a Frontend Developer skilled in the developement of Web Application with HTML, CSS (Vanilla, SASS, Boostrap, Tailwind), Javascript, JSON, REST API, Reactjs, Redux and many more...</p>
               <a href="#" class="btn download">Download My CV</a>
             </div>
 
@@ -68,12 +68,18 @@
 
           <div class="row">
             <div class="about-info pad-15">
-              <div class="rw">
+
+              <div class="row">
                 <div class="about-text pad-15">
-                  <h3>I'm Abdulfatai Quadri and a <span>Frontend Developer</span></h3>
-                  <p>I am a Frontend Software Engineer skilled in the developement of Web Application with HTML, CSS (Vanilla, SASS, Boostrap, Tailwind), Javascript, JSON, REST API, Reactjs, Redux and many more...</p>
-                  <p>I have worked with UI/UX designs and built amazing User Interfac. I am always responsible and committed to my duties.</p>
+                  <h3>I'm Abdulfatai Quadri; <span>Frontend Developer</span></h3>
+                  <p>I am a Frontend Developer skilled in the use of HTML, CSS (Vanilla, SASS, Boostrap, Tailwind), Javascript, JSON, REST API, Reactjs, Redux to deliver exceptional customers experiences.</p>
+                  <p>I have worked with UI/UX designs and built amazing User Interface, worked and highly contributed in a collaborative work environment. I am always responsible and committed to my duties.</p>
                 </div>
+              </div>
+
+              <div class="row">
+                <div class="personal-info pad-15">Info</div>
+                <div class="skills pad-15">Skills</div>
               </div>
             </div>
           </div>
