--- a/index.html
+++ b/index.html
@@ -349,6 +349,9 @@
       </section>
 
       <!-- PORTFOLIO SECTION -->
+      <section class="portfolio section">
+        
+      </section>
 
       
     </div>
