--- a/index.html
+++ b/index.html
@@ -81,13 +81,12 @@
           </div>
 
           <div class="row">
-
             <div class="about-info pad-15">
 
               <div class="row">
                 <div class="about-text pad-15">
                   <h3>I'm Abdulfatai Quadri; <span>Frontend Developer</span></h3>
-                  <p>I am a Frontend Developer skilled in the use of HTML, CSS (Vanilla, SASS, Bootstrap, Tailwind), Javascript, JSON, REST API, Reactjs, Redux to deliver exceptional customers experiences.</p>
+                  <p>I am a Frontend Developer with resourceful customer service and ability to deliver exceptional customer experience.</p>
                   <p>I have worked with UI/UX designs and built amazing User Interface, worked and highly contributed in a collaborative work environment. I am always responsible and committed to my duties.</p>
                 </div>
               </div>
@@ -193,36 +192,15 @@
                   <div class="row">
                     <div class="timeline-box pad-15">
                       <div class="timeline">
-
                         <div class="timeline-item">
                           <div class="circle-dot"></div>
                           <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i>2013 - 2015
+                            <i class="fa fa-calendar"></i>April 2022 - Present
                           </h3>
                           <h4 class="timeline-title">Diploma in Software Engineering</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima laudantium, officiis harum velit accusantium ipsum in minus impedit optio. Vel laborum iure deleniti dolorem reiciendis, aliquam eligendi facilis quis. Velit?</p>
+                          <p class="timeline-text">Altschool Africa, School of Software Engineering</p>
+                          <p class="timeline-text"></p>
                         </div>
-
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i>2013 - 2015
-                          </h3>
-                          <h4 class="timeline-title">Diploma in Software Engineering</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima laudantium, officiis harum velit accusantium ipsum in minus impedit optio. Vel laborum iure deleniti dolorem reiciendis, aliquam eligendi facilis quis. Velit?</p>
-                        </div>
-
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i>2013 - 2015
-                          </h3>
-                          <h4 class="timeline-title">Diploma in Software Engineering</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima laudantium, officiis harum velit accusantium ipsum in minus impedit optio. Vel laborum iure deleniti dolorem reiciendis, aliquam eligendi facilis quis. Velit?</p>
-                        </div>
-
-
-
                       </div>
                     </div>
                   </div>
@@ -233,49 +211,30 @@
                   <div class="row">
                     <div class="timeline-box pad-15">
                       <div class="timeline">
-
                         <div class="timeline-item">
                           <div class="circle-dot"></div>
                           <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i>2013 - 2015
+                            <i class="fa fa-calendar"></i>April 2022 - May 2022
                           </h3>
-                          <h4 class="timeline-title">Diploma in Software Engineering</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima laudantium, officiis harum velit accusantium ipsum in minus impedit optio. Vel laborum iure deleniti dolorem reiciendis, aliquam eligendi facilis quis. Velit?</p>
+                          <h4 class="timeline-title">Side Hustle Internship Cohort 5</h4>
+                          <p class="timeline-text">
+                            <ul>
+                              <li>Developed and designed User Interface</li>
+                              <li>Patnered with other developers to develop validated forms</li>
+                              <li>Worked with UI/UX designs to develop amazing Interfaces</li>
+                            </ul>
+                          </p>
                         </div>
-
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i>2013 - 2015
-                          </h3>
-                          <h4 class="timeline-title">Diploma in Software Engineering</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima laudantium, officiis harum velit accusantium ipsum in minus impedit optio. Vel laborum iure deleniti dolorem reiciendis, aliquam eligendi facilis quis. Velit?</p>
-                        </div>
-
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i>2013 - 2015
-                          </h3>
-                          <h4 class="timeline-title">Diploma in Software Engineering</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima laudantium, officiis harum velit accusantium ipsum in minus impedit optio. Vel laborum iure deleniti dolorem reiciendis, aliquam eligendi facilis quis. Velit?</p>
-                        </div>
-
-
-
                       </div>
                     </div>
-                  </div>
-
+                  </div>                
                 </div>
-                
 
               </div>
 
             </div>
-
           </div>
-
+          
         </div>
 
       </section>
@@ -380,7 +339,7 @@
             <div class="portfolio-item pad-15">
               <div class="portfolio-item-inner">
                 <div class="portfolio-img">
-                  <img src="tropical-mood-designify.png">
+                  <img src="eCommerceSite.png">
                 </div>
               </div>
             </div>
@@ -388,7 +347,7 @@
             <div class="portfolio-item pad-15">
               <div class="portfolio-item-inner">
                 <div class="portfolio-img">
-                  <img src="sunset-beach-designify.png">
+                  <img src="myCalculator.png">
                 </div>
               </div>
             </div>
@@ -396,7 +355,7 @@
             <div class="portfolio-item pad-15">
               <div class="portfolio-item-inner">
                 <div class="portfolio-img">
-                  <img src="photostudio-7-designify.png">
+                  <img src="digitalClock.png">
                 </div>
               </div>
             </div>
@@ -404,15 +363,7 @@
             <div class="portfolio-item pad-15">
               <div class="portfolio-item-inner">
                 <div class="portfolio-img">
-                  <img src="photostudio-8-designify (1).png">
-                </div>
-              </div>
-            </div>
-
-            <div class="portfolio-item pad-15">
-              <div class="portfolio-item-inner">
-                <div class="portfolio-img">
-                  <img src="photostudio-2-designify (1).png">
+                  <img src="3ColumnPreviewCard.png">
                 </div>
               </div>
             </div>
