--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
   <script src="https://kit.fontawesome.com/5dcc6d6cb9.js" crossorigin="anonymous"></script>
   <script defer src="app.js"></script>
   <title>Personal Portfolio</title>
-
-  <link rel="stylesheet" href="style.css" class="alternate-style" title="$skin-color" disabled>
-  <link rel="stylesheet" href="style.css" class="alternate-style" title="$color2" disabled>  
-  <link rel="stylesheet" href="style.css" class="alternate-style" title="$color3" disabled>
-  <link rel="stylesheet" href="style.css" class="alternate-style" title="$color4" disabled>
 </head>
 
 <body>
@@ -479,12 +474,12 @@
       <i class="fas fa-cog fa-spin"></i>
     </div>
     <div class="day-night s-icon">
-      <i class="fas fa-moon"></i>
+      <i class="fas"></i>
     </div>
     <h4>Theme Colors</h4>
     <div class="colors">
       <span class="color1" onclick="setActiveStyle('$skin-color')"></span>
-      <span class="color2" onclick="setActiveStyle('$color2')"></span>
+      <span class="color2" onclick="setActiveStyle()"></span>
       <span class="color3" onclick="setActiveStyle('$color3')"></span>
       <span class="color4" onclick="setActiveStyle('$color4')"></span>
       <span class="color5" onclick="setActiveStyle('$color5')"></span>
