--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
       <nav>
         <ul>
-          <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
-          <li><a href="#"><i class="fa fa-user"></i>About</a></li>
-          <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
-          <li><a href="#"><i class="fa fa-briefcase"></i>Projects</a></li>
-          <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+          <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+          <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+          <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
+          <li><a href="#projects"><i class="fa fa-briefcase"></i>Projects</a></li>
+          <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
         </ul>
       </nav>
 
@@ -42,7 +42,7 @@
 
 
       <!-- HOME SECTION -->
-      <section class="home section">
+      <section class="home section" id="home">
         <div class="container">
 
           <div class="row">
@@ -65,7 +65,7 @@
 
 
       <!-- ABOUT SECTION -->
-      <section class="aboutMe section">
+      <section class="aboutMe section" id="about">
 
         <div class="container">
 
@@ -236,7 +236,7 @@
 
 
       <!-- SERVICES SECTION -->
-      <section class="services section">
+      <section class="services section" id="services">
         <div class="container">
 
           <div class="row">
@@ -314,7 +314,7 @@
 
 
       <!-- PORTFOLIO SECTION -->
-      <section class="portfolio section">
+      <section class="portfolio section" id="projects">
         <div class="container">
           
           <div class="row">
@@ -369,7 +369,7 @@
 
 
       <!-- CONTACT SECTION -->
-      <section class="contact section">
+      <section class="contact section" id="contact">
         <div class="container">
 
           <div class="row">
@@ -470,19 +470,8 @@
 
   <!-- STYLE SWITCHER -->
   <div class="style-switcher">
-    <div class="style-switcher-toggler s-icon">
-      <i class="fas fa-cog fa-spin"></i>
-    </div>
     <div class="day-night s-icon">
       <i class="fas"></i>
-    </div>
-    <h4>Theme Colors</h4>
-    <div class="colors">
-      <span class="color1" onclick="setActiveStyle('$skin-color')"></span>
-      <span class="color2" onclick="setActiveStyle()"></span>
-      <span class="color3" onclick="setActiveStyle('$color3')"></span>
-      <span class="color4" onclick="setActiveStyle('$color4')"></span>
-      <span class="color5" onclick="setActiveStyle('$color5')"></span>
     </div>
   </div>
 </body>
